# cnn-vit

./: .gitignore  README.md  main.py  pyproject.toml  report.aux  report.out  report.tex
.matplotlib/: fontlist-v390.json
.mplconfig/: fontlist-v390.json
configs/: __init__.py  config.py
datasets/: __init__.py  brain_mri_loader.py  cifar_loader.py  eurosat_loader.py  occlusion.py  texture_modification.py
evaluation/: __init__.py  metrics.py  robustness.py
experiments/: __init__.py  build_master_results.py  build_readme_panels.py  evaluate_checkpoints.py  regenerate_plots.py  run_brain_mri_transfer.py  run_eurosat_transfer.py  run_experiments.py
interpretability/: __init__.py  dhvt_attention.py  downstream.py  gradcam.py  vit_attention.py
models/: __init__.py  cnn.py  dhvt.py  vit.py
notebooks/: visualize_results.ipynb
outputs/: data_efficiency.csv  data_efficiency_runs.json  robustness.csv  summary.json
outputs/brain_mri_transfer/: brain_mri_transfer_results.csv  summary.json  transfer_runs.json
outputs/checkpoint_evaluation/: evaluation_index.json
outputs/checkpoint_evaluation_brain/: evaluation_index.json
outputs/checkpoints/: cnn_100pct_best.pt  cnn_10pct_best.pt  cnn_25pct_best.pt  cnn_50pct_best.pt
outputs/eurosat_transfer/: eurosat_transfer_results.csv  summary.json  transfer_runs.json
outputs/eurosat_transfer_learning/: eurosat_transfer_results.csv  summary.json
outputs/eurosat_transfer_pretrained_backup/: summary.json  (+2 more)
report/: report.tex
training/: trainer.py
utils/: __init__.py  artifacts.py  helpers.py  transfer.py
(+135 files in other folders)
